plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kumoh-talk'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.4'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.4.4'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.4.4'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.4'
	implementation 'org.springframework.boot:spring-boot-starter-websocket:3.4.4'
	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.4.4'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j:9.1.0'
	annotationProcessor 'org.projectlombok:lombok:1.18.36'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.4.4'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.4'

	implementation 'org.springframework.boot:spring-boot-starter-security:3.4.4'
	testImplementation 'org.springframework.security:spring-security-test:6.4.4'

	implementation 'io.jsonwebtoken:jjwt:0.12.3'

	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	implementation(platform("software.amazon.awssdk:bom:2.27.21"))
	implementation 'software.amazon.awssdk:s3:2.31.50'
	implementation 'software.amazon.awssdk:cloudfront:2.31.50'
}

tasks.named('test') {
	useJUnitPlatform()
}
